# lambda-rust-issue

./: Cargo.toml
