[package]
name = "handler"
version = "0.1.0"
edition = "2021"
autobins = false

[dependencies]
lambda_runtime = "^0"
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
log = "^0.4"
simple_logger = "^1"
tokio = { version = "^1", features = ["rt", "macros"] }

[[bin]]
name = "bootstrap"
path = "src/main.rs"
